# CleanCorpus

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/cleancorpus/: main.py  utils.py
src/cleancorpus/cli/: image.py  image_filters.py  label.py
src/cleancorpus/filters/: redundant.py  shape.py  similar.py
src/pre-lable-clean/: main.py
src/prelabelclean/: main.py
src/prelabelclean/filters/: similar.py
tests/: test_redundant.py  test_shape.py  test_similar.py
